# xDAN-reasoner-zero

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  nccl.conf  parameter_offload.py  partitioned_param_coordinator.py
orz/datasets/math/: gsm8k.py
orz/exp_engine/: __init__.py
orz/exp_engine/accelerators/inference/: vllm_engine.py  vllm_worker_wrap.py
orz/exps/: __init__.py  base_exp.py
orz/exps/examples/ppo/: ppo_base_exp.py
orz/ppo/: __init__.py  actors.py  models.py  openrlhf_deepspeed.py  replay_buffer.py  trainer.py  utils.py
playground/: orz_32b_ppo.py  orz_7b_grpo.py  orz_7b_ppo.py  zero_setting_base.py
